--- a/BussinessNearMe/app/build.gradle
+++ b/BussinessNearMe/app/build.gradle
@@ -51,4 +51,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     implementation 'com.google.android.gms:play-services-location:20.0.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
 }
